<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_descriere_json"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/descriere_acces_json"
        android:textSize="@dimen/text_large_15sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_acces_json"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_acces_json" />

    <Button
        android:id="@+id/btn_acces_json"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorDarkBerry"
        android:text="@string/acces_json_btn"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_activitate_turistica"
        app:layout_constraintStart_toStartOf="@+id/btn_add_activitate_turistica"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_activitate_turistica" />

    <ImageView
        android:id="@+id/iv_logo"
        style="@style/iv_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_add_masa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorDarkBerry"
        android:text="@string/restaurant_btn"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_descriere_app" />

    <TextView
        android:id="@+id/tv_descriere_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/descriere_app"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_large_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add_activitate_turistica"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/activitate_vizitare_btn"
        android:background="@color/colorDarkBerry"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_masa"
        app:layout_constraintStart_toStartOf="@+id/btn_add_masa"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_masa" />

    <TextView
        android:id="@+id/tv_descriere_masa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/descriere_restaurant"
        android:textSize="@dimen/text_large_15sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_masa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_add_masa" />

    <TextView
        android:id="@+id/tv_descriere_fitness"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/descriere_activitate"
        android:textSize="@dimen/text_large_15sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_activitate_turistica"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_add_activitate_turistica" />

    <TextView
        android:id="@+id/tv_descriere_rapoarte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/descriere_tv_rapoarte"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_large_15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_rapoarte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_rapoarte" />

    <Button
        android:id="@+id/btn_rapoarte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorDarkBerry"
        android:text="@string/rapoarte_btn"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/btn_acces_json"
        app:layout_constraintStart_toStartOf="@+id/btn_acces_json"
        app:layout_constraintTop_toBottomOf="@+id/btn_acces_json" />
</androidx.constraintlayout.widget.ConstraintLayout>